# music-theory-explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: generated.csv  measured_raw.csv
frontend/: README.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/models/: patterns.json
frontend/src/: App.tsx  constants.ts  index.css  keywords.ts  main.tsx  schemas.ts
frontend/src/components/: CentsCalculator.tsx  ChordBuilder.tsx  ChordVoicingFinder.tsx  CircleOfFifths.tsx  CompactVoicingSelector.tsx  FrequencyPlot.tsx  Fretboard.tsx  HarmonicOverlap.tsx  HarmonicSeries.tsx  IntervalExplorer.tsx  MiniFretboard.tsx  PageLoading.tsx  ProgressionBuilder.tsx  ScaleExplorer.tsx  StickyNav.tsx  VoicingCard.tsx
frontend/src/core/: chordAnalysis.ts  chordAudio.ts  chordGeneration.ts  chordVoicings.ts  chords.ts  colorClassifier.ts  enharmonic.ts  frequencyAnalysis.ts  fretboard.ts  genreCategorizer.ts  harmonicDistance.ts  harmonics.ts  harmony.ts  hybridScoring.ts  intervals.ts  melody.ts  melodyGenerator.ts  musicData.ts  musicTheory.ts  progressionMap.ts  progressions.ts  recommendationCategorizer.ts  (+5 more)
python/: freq.py
python/models/: ARCHITECTURE.md  README.md  __init__.py  build_models.py  chord_normalizer.py  markov_model.py  pattern_extractor.py  query_model.py  recommender.py  test_normalizer.py
python/notebooks/: 0-initial-exploration.ipynb  1-second-exploration.ipynb  2-progressions-dataset.ipynb  3-model-training.ipynb
python/shared/: config.py  paths.py
scripts/: process-samples.sh
(+68 files in other folders)
