[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.3",
    "nbconvert>=7.17.0",
    "nbstripout>=0.9.0",
    "ty>=0.0.14",
]

